Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86878

QtQuick3d fails with GCC-arm7 & Ubuntu 18.04

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.0.0 Beta1
    • 6.0
    • Quick: 3D
    • None
    • Linux/Wayland
    • 1
    • 952026fd65d6a90b9841589e6a80810677bb9994 (qt/qtquick3d/dev)

    Description

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1600860416

      https://testresults.qt.io/coin/api/results/qt/qtquick3d/bc18474c99ca3098d9b69b6985cbb69c72112321/LinuxUbuntu_18_04x86_64LinuxQEMUarmv7GCCqtci-linux-Ubuntu-18.04-x86_64-32dc94UseLegacyInstructions/2434e627fbeccb05f6b0dcfe71a461c26ee1f707/build_1600860800/log.txt.gz

      I/home/qt/work/install/include/QtGui/6.0.0/QtGui -I/home/qt/work/install/include/QtCore/6.0.0 -I/home/qt/work/install/include/QtCore/6.0.0/QtCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtCore -I.moc -I/home/qt/work/install/mkspecs/devices/linux-imx7-g++ -o .obj/qssgutils.o qssgutils.cpp
      agent:2020/09/23 14:44:06 build.go:302: cc1plus: all warnings being treated as errors
      agent:2020/09/23 14:44:06 build.go:302: Makefile:1271: recipe for target '.obj/qqsbcollection.o' failed
      agent:2020/09/23 14:44:06 build.go:302: make[2]: *** [.obj/qqsbcollection.o] Error 1
      agent:2020/09/23 14:44:06 build.go:302: make[2]: *** Waiting for unfinished jobs....
      agent:2020/09/23 14:44:07 build.go:302: In file included from /opt/yocto-armv7/sysroots/armv7at2hf-neon-poky-linux-gnueabi/usr/include/c++/8.3.0/algorithm:62,
      agent:2020/09/23 14:44:07 build.go:302: from /home/qt/work/install/include/QtCore/qglobal.h:130,
      agent:2020/09/23 14:44:07 build.go:302: from /home/qt/work/install/include/QtCore/QtCore:4,
      agent:2020/09/23 14:44:07 build.go:302: from ../../include/QtQuick3DUtils/QtQuick3DUtilsDepends:3:
      agent:2020/09/23 14:44:07 build.go:302: /opt/yocto-armv7/sysroots/armv7at2hf-neon-poky-linux-gnueabi/usr/include/c++/8.3.0/bits/stl_algo.h: In function ‘void std::__unguarded_linear_insert(_RandomAccessIterator, _Compare) [with _RandomAccessIterator = QTypedArrayData<QSSGPerfTimer::Entry>::iterator; _Compare = __gnu_cxx::__ops::_Val_less_iter]’:
      agent:2020/09/23 14:44:07 build.go:302: /opt/yocto-armv7/sysroots/armv7at2hf-neon-poky-linux-gnueabi/usr/include/c++/8.3.0/bits/stl_algo.h:1821:5: note: parameter passing for argument of type ‘QTypedArrayData<QSSGPerfTimer::Entry>::iterator’ changed in GCC 7.1
      agent:2020/09/23 14:44:07 build.go:302: __unguarded_linear_insert(_RandomAccessIterator __last,

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              stromme Christian
              hehalmet Heikki Halmet
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes