Fix warnings

Warnings due to wrong format types in print statement

Fixes: QTBUG-86878
Change-Id: Iedbd3f693d9b05c77f3b0fac71f81fe236f178fc
Reviewed-by: Andy Nichols <andy.nichols@qt.io>